k8s/templates/manifest-template-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __NAME__-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: __NAME__-__ENV__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __NAME__-__ENV__
                port:
                  number: __PORT__
